--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container text-center">
         <div class="jumbotron">
-            <h1>Rock | Paper | Scissors</h1>
+            <h1>Rock  Paper  Scissors</h1>
         </div>
         <div class="row">
             <div class="col-xs-12 pre-connection">
